Added @drewfreyling to list of maintainers.

--- a/templates/about.html
+++ b/templates/about.html
@@ -26,7 +26,6 @@
             <a href="http://github.com/ryankirkman">Ryan Kirkman</a>
           </td>
           <td style="width: 200px;">
-
             <a href="http://petecooper.org" style="margin-right: 10px;">
               <img style="width: 50px;" alt="" src="/img/pete.jpg" />
             </a>
@@ -40,7 +39,11 @@
             </a>
             <a href="http://github.com/thomasdavis">Thomas Davis</a>
           </td>
-          <td style="width: 200px;">
+		  <td style="width: 200px;">
+            <a href="http://decompile.it/blog/" style="margin-right: 10px;">
+              <img style="width: 50px;" alt="Drew Freyling" src="/img/drew.jpg" />
+            </a>
+            <a href="http://decompile.it/blog/">Drew Freyling</a>
           </td>
         </tr>
 
