attempt to fix descriptions

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="{{title}}" />
   <meta property="og:image" content="/img/logotext.png" />
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="description" content="">
+  <meta name="description" content="{{description}}">
   <link rel="stylesheet" href="/css/bootstrap.css">
   <link rel="stylesheet" href="/css/theme.css">
 </head>
