make table all bootstrapped.

--- a/templates/about.html
+++ b/templates/about.html
@@ -10,7 +10,7 @@
       <br />Currently used by ~148,000 websites worldwide, <a href="http://trends.builtwith.com/cdn/CDN-JS">see more</a>.
     </p>
 
-    <table style="margin-top: 15px; margin-bottom: 15px;">
+    <table class="table" style="margin-top: 15px; margin-bottom: 15px;">
       <thead>
         <tr>
           <td>Creators</td>
