--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,7 +37,7 @@
           <li class=""><a href="/about">About</a></li>
           <li class="pull-right"><a href="http://www.hipchat.com/gBYzv0RIL">Community Chat</a>
           </li>
-          <li><a href="http://www.category5.tv/episodes/345.php"><strong><em>Recent Interview about cdnjs </em></strong></a></li>
+          <li><a href="https://www.youtube.com/watch?v=6-5hJblkLjo"><strong><em>Recent Interview about cdnjs </em></strong></a></li>
 
         </ul>
         <ul class="nav navbar-nav navbar-right">
