--- a/templates/about.html
+++ b/templates/about.html
@@ -72,6 +72,7 @@
                             <em><img src="http://d2i3bryf8wh7jo.cloudfront.net/bitcoin1.png" style="float: left; margin-right: 10px; width: 40px; height: 40px;" /> Earn <strong>$5 in Bitcoin</strong> for every pull request which <a href="https://github.com/cdnjs/cdnjs#enabling-npm-auto-update">converts a library to auto-update.</a></em>-->
 
     </div>
+    <iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/6-5hJblkLjo?rel=0" frameborder="0" allowfullscreen></iframe>
   </div>
   <!--Span7-->
   <div class="col-md-5">
