--- a/templates/about.html
+++ b/templates/about.html
@@ -58,7 +58,7 @@
         <li>Hover over rows and click on the +/- symbols to change your favorites(yellow)</li>
       </ul>
     </div>
-
+    <h3>Sponsors</h3>
     <div class="sponsors">
 
       At CloudFlare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. CloudFlare is proud to provide the global CDN infrastructure that will help power that future.
@@ -72,6 +72,8 @@
                             <em><img src="http://d2i3bryf8wh7jo.cloudfront.net/bitcoin1.png" style="float: left; margin-right: 10px; width: 40px; height: 40px;" /> Earn <strong>$5 in Bitcoin</strong> for every pull request which <a href="https://github.com/cdnjs/cdnjs#enabling-npm-auto-update">converts a library to auto-update.</a></em>-->
 
     </div>
+    <h3>Media</h3>
+
     <iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/6-5hJblkLjo?rel=0" frameborder="0" allowfullscreen></iframe>
   </div>
   <!--Span7-->
