--- a/templates/about.html
+++ b/templates/about.html
@@ -96,6 +96,8 @@
           </li>
           <li><a href="http://www.hipchat.com/gBYzv0RIL">Chat</a>
           </li>
+          <li><a href="/members">Members</a>
+          </li>
 
         </ul>
       </div>
