--- a/templates/members.html
+++ b/templates/members.html
@@ -1,4 +1,4 @@
-<h3>Members</h3>
+<h3>Members - beta</h3>
 <p><em>{{total_users}} community members and growing</em></p>
 <ul class="pagination">
   {{#page_nav}}
