--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
       <img id="loader" src="img/ajax-loader.gif" style="display: none; margin: 30px auto;">
     </form>
 
-    <p><br />Don't have an account? <a href="signup.html">register now</a></p>
+    <p><br />Don't have an account? <a href="/register">register now</a></p>
   </div> 
 <script>
     // Function to show and hide the loader anim
