--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,7 @@
   <meta property="og:image" content="/img/logotext.png" />
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="description" content="{{description}}">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/css/toastr.css">
   <link rel="stylesheet" href="/css/bootstrap.css">
   <link rel="stylesheet" href="/css/theme.css">
 </head>
@@ -62,6 +63,7 @@
   <script src="https://app.userapp.io/js/userapp.client.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-dropdown.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.0.0-beta.5/ZeroClipboard.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
   <script src="/js/kaka.js"></script>
   <script src="/js/main.js"></script>
 
