--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
                   </div>
                 </td>
                 <td style="padding: 0; width: 100%;">
-                  <div style="position: relative; padding: 8px;" class="library-column {{fileType}}-type">
+                  <div style="position: relative; padding: 8px;" data-lib-name="{{name}}" class="library-column {{fileType}}-type">
                     <p itemprop="downloadUrl" class="library-url" style="padding: 0; margin: 0">//cdnjs.cloudflare.com/ajax/libs/{{originalName}}/{{version}}/{{filename}}</p>
                   </div>
                 </td>
