--- a/templates/library.html
+++ b/templates/library.html
@@ -43,7 +43,7 @@
           var disqus_shortname = 'cdnjsweb'; // required: replace example with your forum shortname
           var disqus_identifier = '/library/{{library.name}}';
           var disqus_title = '{{library.name}}';
-          var disqus_url = '/library/{{library.name}}';
+          var disqus_url = 'http://cdnjs.com/library/{{library.name}}';
           /* * * DON'T EDIT BELOW THIS LINE * * */
           (function() {
               var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
