--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,8 +35,8 @@
       <div class="navbar-collapse collapse navbar-responsive-collapse">
         <ul class="nav navbar-nav">
           <li class=""><a href="http://github.com/cdnjs/cdnjs">Add a library</a></li>
-          <li class=""><a href="/about">About</a>
-          </li>
+          <li class=""><a href="/about">About</a></li>
+          <li class=""><a href="/news">News Feed</a></li>
 
         </ul>
         <ul class="nav navbar-nav navbar-right">
@@ -64,6 +64,7 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/js/bootstrap-dropdown.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/zeroclipboard/2.0.0-beta.5/ZeroClipboard.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.2/js/toastr.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-timeago/1.4.0/jquery.timeago.min.js"></script>
   <script src="/js/kaka.js"></script>
   <script src="/js/main.js"></script>
 
