--- a/templates/newsfeed.html
+++ b/templates/newsfeed.html
@@ -39,7 +39,7 @@
             <div class="col-md-1"><img style="float: left; margin-right: 5px;  margin-bottom: 5px; width: 50px;" class="avatar" src="{{gravatar}}" /></div>
             <div class="col-md-11">
             <p><a href="/profile/{{login}}"><strong>{{login}}</strong></a><br />{{{status}}}</p>
-            <div style="color: #ccc;" class="pull-right"><a href="/news/{{_id}}">Comments</a> | Posted <span  class="timeago" title="{{posted_at}}"></span></div></div>
+            <div style="color: #ccc;" class="pull-right"><a data-disqus-identifier="{{_id}}" href="/news/{{_id}}">Comments</a> | Posted <span  class="timeago" title="{{posted_at}}"></span></div></div>
             <div style="clear: both;"></div></div>
 
             <div style="clear: both;"></div>
