--- a/templates/newsfeed.html
+++ b/templates/newsfeed.html
@@ -20,7 +20,7 @@
       <hr />
      <strong>Rules</strong><br /> <br/>
       <ul style="margin: 0;padding:0;">
-        <li>Feel free to promote your own projects or ask for feedback</li>
+        <li>Feel free to promote your own projects, ask for feedback or say anything you feel like</li>
         <li>Keep your updates relevant to the web development industry</li>
         <li>You may only post <strong>one</strong> news item a day</li>
         <li>Limited to 200 characters, use url shorteners!</li>
