--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,7 +36,7 @@
         <ul class="nav navbar-nav">
           <li class=""><a href="http://github.com/cdnjs/cdnjs">Add a library</a></li>
           <li class=""><a href="/about">About</a></li>
-          <li class=""><a href="/news">News Feed</a></li>
+          <li class=""><a href="/news">News Feed (beta)</a></li>
 
         </ul>
         <ul class="nav navbar-nav navbar-right">
