--- a/templates/newsfeed.html
+++ b/templates/newsfeed.html
@@ -25,8 +25,9 @@
         <li>You may only post <strong>one</strong> news item a day</li>
         <li>Limited to 200 characters, use url shorteners!</li>
       </ul>
-
-  
+      <br />
+     <strong>Chat</strong><br /> <br/>
+      <p>Join the cdnjs <a href="http://www.hipchat.com/gBYzv0RIL" target="_blank">community chat</a></p>
     </div>
     <div class="col-md-9">
       <strong>Latest updates</strong>
