--- a/templates/library.html
+++ b/templates/library.html
@@ -44,9 +44,9 @@
       <script type="text/javascript">
           /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
           var disqus_shortname = 'cdnjsweb'; // required: replace example with your forum shortname
-          var disqus_identifier = '/library/{{library.name}}';
+          var disqus_identifier = '/libraries/{{library.name}}';
           var disqus_title = '{{library.name}}';
-          var disqus_url = 'http://cdnjs.com/library/{{library.name}}';
+          var disqus_url = 'http://cdnjs.com/libraries/{{library.name}}';
           /* * * DON'T EDIT BELOW THIS LINE * * */
           (function() {
               var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
@@ -55,6 +55,6 @@
           })();
       </script>
       <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    
+
   </div>
 </div>
