--- a/templates/newsfeed_item.html
+++ b/templates/newsfeed_item.html
@@ -8,7 +8,7 @@
     </a>
     <br />{{{status}}}</p>
   <div style="color: #ccc;" class="pull-right">Posted
-    <span class="timeago" title="{{posted_at}}"></span>
+    <span class="timeago" title="">{{timeago}}</span>
   </div>
 </div>
 <div style="clear: both;"></div>
@@ -21,8 +21,8 @@
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
     var disqus_shortname = 'cdnjsweb'; // required: replace example with your forum shortname
     var disqus_identifier = '{{_id}}';
-    var disqus_title = '{{_id}}';
-    var disqus_url = 'http://cdnjs.com/news/{{_id}}';
+    var disqus_title = '{{slug}}';
+    var disqus_url = 'http://cdnjs.com/news/{{_id}}/{{slug}}';
     /* * * DON'T EDIT BELOW THIS LINE * * */
     (function() {
         var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
