new temper question

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -73,9 +73,7 @@
     <script type="text/javascript">try{clicky.init(66376315);}catch(err){}</script>
 
     <noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66376315ns.gif" /></p></noscript>
-    <!--
-<script data-id="bexjliif" src="https://temper.io/d.js" class="temper" async></script>
-  -->
+    <script data-id="zotkghjd" src="https://temper.io/d.js" class="temper" async></script>
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
