--- a/templates/register.html
+++ b/templates/register.html
@@ -4,7 +4,10 @@
     <p>Save your
       <strong>favorites</strong> for easy access | Receive important system
       <strong>notifications | </strong>Create your own
-      <strong>public profile</strong> to share.</p>
+      <strong>public profile</strong> to share.
+    <br />
+  Post updates about <strong>your projects</strong> to over 40,000 developers a week</p>
+
     <br />
     <br />
     <div class="form-fields">
@@ -20,7 +23,11 @@
   </form>
   <p>
     <br />Already have an account? <a href="login">Log in</a>
-  </p>
+  </p><br />
+  <div  class='col-md-6 col-md-offset-3'>
+
+  <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp"></a><br />Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</p>
+</div>
 </div>
 <script>
 // Function to show and hide the loader anim
