--- a/templates/newsfeed_item.html
+++ b/templates/newsfeed_item.html
@@ -19,6 +19,14 @@
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+    {{#hasUser}}
+    var disqus_config = function () {
+      // The generated payload which authenticates users with Disqus
+      this.page.remote_auth_s3 = '{{user.auth}}';
+      this.page.api_key = '{{user.pubKey}}';
+    }
+
+    {{/hasUser}}
     var disqus_shortname = 'cdnjsweb'; // required: replace example with your forum shortname
     var disqus_identifier = '{{_id}}';
     var disqus_title = '{{slug}}';
