--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,30 +22,50 @@
 <body>
   <div class="container">
 
+    <div class="row">
+      <div class="col-md-7">
+        <div class="navbar navbar-default">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">cdnjs</a>
+          </div>
+          <div class="navbar-collapse collapse navbar-responsive-collapse">
+            <ul class="nav navbar-nav">
+              <li class=""><a href="http://github.com/cdnjs/cdnjs">Add a library</a></li>
+              <li class=""><a href="/about">About</a></li>
 
-    <div class="navbar navbar-default">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">cdnjs</a>
+            </ul>
+          </div>
+        </div>
       </div>
-      <div class="navbar-collapse collapse navbar-responsive-collapse">
-        <ul class="nav navbar-nav">
-          <li class=""><a href="http://github.com/cdnjs/cdnjs">Add a library</a></li>
-          <li class=""><a href="/about">About</a></li>
-          <li class=""><a href="/news">News Feed (beta)</a></li>
+      <div class="col-md-5">
+        <div class="navbar navbar-inverse">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/news">community</a>
+          </div>
+          <div class="navbar-collapse collapse navbar-responsive-collapse">
+            <ul class="nav navbar-nav">
+              <li class=""><a href="/news">Submit</a></li>
 
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a style="display: none;" class="login" href="/login">Login</a>
-          <li><a style="display: none;" class="logout" href="/logout">Logout</a>
-          <li><a style="display: none;" class="register" href="/register">Register</a>
-          <li><a style="display: none;" class="profile" href="/profile">Profile</a>
-          </li>
-        </ul>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              <li><a style="display: none;" class="login" href="/login">Login</a>
+              <li><a style="display: none;" class="logout" href="/logout">Logout</a>
+              <li><a style="display: none;" class="register" href="/register">Register</a>
+              <li><a style="display: none;" class="profile" href="/profile">Profile</a>
+              </li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
 
