track.io broke login

--- a/templates/register.html
+++ b/templates/register.html
@@ -5,8 +5,8 @@
       <strong>favorites</strong> for easy access | Receive important system
       <strong>notifications | </strong>Create your own
       <strong>public profile</strong> to share.
-    <br />
-  Post updates about <strong>your projects</strong> to over 40,000 developers a week</p>
+    <!--<br />
+  Post updates about <strong>your projects</strong> to over 40,000 developers a week</p>-->
 
     <br />
     <br />
@@ -18,7 +18,7 @@
       <input id="password" type="password" class="form-control" placeholder="Password" required>
       <br />
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Create my account</button>
+    <button class="btn btn-lg btn-info btn-block" type="submit">Create my account</button>
     <img id="loader" src="img/ajax-loader.gif" style="display: none; margin: 30px auto;">
   </form>
   <p>
