--- a/templates/login.html
+++ b/templates/login.html
@@ -1,18 +1,18 @@
 <div class="container" style="text-align: center;">
-    <form class="form" onsubmit="return login()">
+    <form class="form login-form">
       <h2 class="form-heading">Log in to cdnjs</h2>
       <p>Save your
         <strong>favorites</strong> for easy access | Receive important system
         <strong>notifications | </strong>Create your own
         <strong>public profile</strong> to share.
-      <br />
-    Post updates about <strong>your projects</strong> to over 40,000 developers a week</p>
+    <!--  <br />
+    Post updates about <strong>your projects</strong> to over 40,000 developers a week</p>-->
 
       <div class="form-fields">
         <input id="username" type="text" class="form-control" placeholder="Username" required autofocus><br />
         <input id="password" type="password" class="form-control" placeholder="Password" required><br />
       </div>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
+      <input class="btn btn-lg btn-info btn-block" type="submit" value="Log in">
       <img id="loader" src="img/ajax-loader.gif" style="display: none; margin: 30px auto;">
     </form>
 
@@ -23,41 +23,5 @@
   </div>
 </div>
 <script>
-    // Function to show and hide the loader anim
-    function showLoader(show) {
-      document.getElementById("loader").style.display = (show ? "block" : "none");
-    }
 
-    // Login the user
-    function login() {
-
-      // Show the loader
-      showLoader(true);
-
-      // This will authenticate the user
-      UserApp.User.login({
-        login: document.getElementById("username").value,
-        password: document.getElementById("password").value
-      }, function(error, result) {
-        if (error) {
-          // Wrong password maybe?
-          alert("Error: " + error.message);
-          showLoader(false);
-        } else {
-          onLoginSuccessful();
-        }
-      });
-
-      // When the user has been logged in successfully
-      function onLoginSuccessful() {
-        // Now, save the token in a cookie
-        Kaka.set("ua_session_token", UserApp.global.token);
-
-        // Redirect the user to the index page
-        window.location.href = "/";
-        showLoader(false);
-      }
-
-      return false;
-    }
   </script>
