--- a/templates/library.html
+++ b/templates/library.html
@@ -48,7 +48,7 @@
         {{#updates}}
           <li style="border-bottom: 1px solid #ccc; margin-bottom: 10px;padding-bottom: 10px;">
           <div class="row">
-            <div class="col-md-1"><img style="float: left; margin-right: 5px;  margin-bottom: 5px; width: 50px;" class="avatar" src="{{gravatar}}" /></div>
+            <div class="col-md-1"><img style="float: left; margin-right: 5px;  margin-bottom: 5px; width: 50px;" class="avatar img-circle" src="{{gravatar}}" /></div>
             <div class="col-md-11">
             <p><a href="/profile/{{login}}"><strong>{{login}}</strong></a><br />{{{status}}}</p>
             <div style="color: #ccc;" class="pull-right"><a data-disqus-identifier="{{_id}}" href="/news/{{_id}}/{{slug}}">Comments</a> | Posted <span  class="timeago" title="">{{timeago}}</span></div></div>
