--- a/templates/about.html
+++ b/templates/about.html
@@ -13,8 +13,8 @@
     <table class="table" style="margin-top: 15px; margin-bottom: 15px;">
       <thead>
         <tr>
-          <td>Creators</td>
-          <td>Maintainers</td>
+          <td class="translateit">Creators</td>
+          <td class="translateit">Maintainers</td>
         </tr>
       </thead>
       <tbody>
@@ -58,8 +58,8 @@
         <li>Hover over rows and click on the +/- symbols to change your favorites(yellow)</li>
       </ul>
     </div>
-    <h3>Sponsors</h3>
-    <div class="sponsors">
+    <h3 class="translateit">Sponsors</h3>
+    <div class="sponsors" class="translateit">
 
       At CloudFlare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. CloudFlare is proud to provide the global CDN infrastructure that will help power that future.
       <br />
@@ -72,7 +72,7 @@
                             <em><img src="http://d2i3bryf8wh7jo.cloudfront.net/bitcoin1.png" style="float: left; margin-right: 10px; width: 40px; height: 40px;" /> Earn <strong>$5 in Bitcoin</strong> for every pull request which <a href="https://github.com/cdnjs/cdnjs#enabling-npm-auto-update">converts a library to auto-update.</a></em>-->
 
     </div>
-    <h3>Media</h3>
+    <h3 class="translateit">Media</h3>
 
     <iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/6-5hJblkLjo?rel=0" frameborder="0" allowfullscreen></iframe>
   </div>
@@ -80,23 +80,23 @@
   <div class="col-md-5">
     <div class="panel panel-primary">
       <div class="panel-heading">
-        <div class="panel-title">Explore</div>
+        <div class="panel-title" class="translateit">Explore</div>
       </div>
       <div class="panel-body">
         <ul class="nav">
-          <li class=""><a href="http://github.com/cdnjs/cdnjs">Add a library</a>
+          <li class=""><a href="http://github.com/cdnjs/cdnjs" class="translateit">Add a library</a>
           </li>
-          <li class=""><a href="https://github.com/cdnjs/cdnjs/issues?direction=desc&sort=created&state=open">Feedback</a>
+          <li class=""><a href="https://github.com/cdnjs/cdnjs/issues?direction=desc&sort=created&state=open" class="translateit">Feedback</a>
           </li>
-          <li><a href="https://www.cloudflare.com/network-map">Our network</a>
+          <li><a href="https://www.cloudflare.com/network-map" class="translateit">Our network</a>
           </li>
-          <li><a href="http://stats.pingdom.com/htbkuegtgycv">Uptime</a>
+          <li><a href="http://stats.pingdom.com/htbkuegtgycv" class="translateit">Uptime</a>
           </li>
-          <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources">Plugins</a>
+          <li><a href="https://github.com/cdnjs/cdnjs/wiki/Extensions%2C-Plugins%2C-Resources" class="translateit">Plugins</a>
           </li>
-          <li><a href="http://www.hipchat.com/gBYzv0RIL">Chat</a>
+          <li><a href="http://www.hipchat.com/gBYzv0RIL" class="translateit">Chat</a>
           </li>
-          <li><a href="/members">Members</a>
+          <li><a href="/members" class="translateit">Members</a>
           </li>
 
         </ul>
