--- a/templates/layout.html
+++ b/templates/layout.html
@@ -35,8 +35,8 @@
           </div>
           <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-              <li class=""><a href="http://github.com/cdnjs/cdnjs">Add a library</a></li>
-              <li class=""><a href="/about">About</a></li>
+              <li class=""><a href="http://github.com/cdnjs/cdnjs" class="translateit">Add a library</a></li>
+              <li class=""><a href="/about" class="translateit">About</a></li>
 
             </ul>
           </div>
@@ -50,18 +50,18 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/news">community</a>
+            <a class="navbar-brand" href="/news" class="translateit">community</a>
           </div>
           <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-              <li class=""><a href="/news">Submit</a></li>
+              <li class=""><a href="/news" class="translateit">Submit</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a style="display: none;" class="login" href="/login">Login</a>
-              <li><a style="display: none;" class="logout" href="/logout">Logout</a>
-              <li><a style="display: none;" class="register" href="/register">Register</a>
-              <li><a style="display: none;" class="profile" href="/profile">Profile</a>
+              <li><a style="display: none;" class="login" href="/login" class="translateit">Login</a>
+              <li><a style="display: none;" class="logout" href="/logout" class="translateit">Logout</a>
+              <li><a style="display: none;" class="register" href="/register" class="translateit">Register</a>
+              <li><a style="display: none;" class="profile" href="/profile" class="translateit">Profile</a>
               </li>
             </ul>
           </div>
