--- a/templates/about.html
+++ b/templates/about.html
@@ -59,10 +59,10 @@
       </ul>
     </div>
     <h3 class="translateit">Sponsors</h3>
-    <div class="sponsors" class="translateit">
+    <div class="sponsors">
 
-      At CloudFlare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. CloudFlare is proud to provide the global CDN infrastructure that will help power that future.
-      <br />
+      <p class="translateit">At CloudFlare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. CloudFlare is proud to provide the global CDN infrastructure that will help power that future.</p>
+
       <br />
       <a href="http://cloudflare.com">
         <img alt="cloudflare" style="margin-bottom: 20px;" src="/img/poweredbycloudflare.png" />
