--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 <div class="container" style="text-align: center;">
     <form class="form login-form">
-      <h2 class="form-heading">Log in to cdnjs</h2>
-      <p>Save your
+      <h2 class="form-heading" class="translateit">Log in to cdnjs</h2>
+      <p class="translateit">Save your
         <strong>favorites</strong> for easy access | Receive important system
         <strong>notifications | </strong>Create your own
         <strong>public profile</strong> to share.
@@ -16,10 +16,10 @@
       <img id="loader" src="img/ajax-loader.gif" style="display: none; margin: 30px auto;">
     </form>
 
-    <p><br />Don't have an account? <a href="/register">register now</a></p><br />
+    <p class="translateit"><br />Don't have an account? <a href="/register">register now</a></p><br />
     <div  class='col-md-6 col-md-offset-3'>
 
-    <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp"></a><br />Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</p>
+    <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp"></a><br /><span  class="translateit">Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</span></p>
   </div>
 </div>
 <script>
