--- a/templates/about.html
+++ b/templates/about.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-md-7">
     <p>
-      Everyone loves the&nbsp;<a target="_blank" href="http://code.google.com/apis/libraries/devguide.html">Google CDN</a>&nbsp;right? Even&nbsp;<a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank">Microsoft runs their own CDN</a>.
-      <br />The problem is, they only host the most popular libraries.
-      <br />We host it all - JavaScript, CSS, SWF, images, etc!
+      <span class="translateit">Everyone loves the&nbsp;</span><a target="_blank" href="http://code.google.com/apis/libraries/devguide.html" class="translateit">Google CDN</a><span class="translateit">&nbsp;right? Even&nbsp;</span><a href="http://www.asp.net/ajaxlibrary/cdn.ashx" target="_blank" class="translateit">Microsoft runs their own CDN</a>.
+      <br /><span class="translateit">The problem is, they only host the most popular libraries.</span>
+      <br /><span class="translateit">We host it all - JavaScript, CSS, SWF, images, etc!</span>
     </p>
     <p style="margin-top: 6px;">
-      Supports http/https/spdy, we encourage leaving the protocol&nbsp;<a href="http://paulirish.com/2010/the-protocol-relative-url/">off</a>!
-      <br />Currently used by ~148,000 websites worldwide, <a href="http://trends.builtwith.com/cdn/CDN-JS">see more</a>.
+      <span class="translateit">Supports http/https/spdy, we encourage leaving the protocol&nbsp;</span><a href="http://paulirish.com/2010/the-protocol-relative-url/" class="translateit">off</a>!
+      <br /><span class="translateit">Currently used by ~148,000 websites worldwide, </span><a href="http://trends.builtwith.com/cdn/CDN-JS" class="translateit">see more</a>.
     </p>
 
     <table class="table" style="margin-top: 15px; margin-bottom: 15px;">
