--- a/templates/home.html
+++ b/templates/home.html
@@ -11,8 +11,8 @@
         <table style="margin-top: 10px;" cellpadding="0" cellspacing="0" border="0" class="table table-striped" id="example">
           <thead>
             <tr>
-              <th>Library</th>
-              <th>Link</th>
+              <th class="translateit">Library</th>
+              <th class="translateit">Link</th>
             </tr>
           </thead>
           <tbody>
