--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,10 @@
 <div class="container" style="text-align: center;">
   <form class="form" onsubmit="return signup()">
-    <h2 class="form-heading">Sign up for cdnjs</h2>
-    <p>Save your
+    <h2 class="form-heading translateit">Sign up for cdnjs</h2>
+    <p class="translateit">Save your
       <strong>favorites</strong> for easy access | Receive important system
       <strong>notifications | </strong>Create your own
-      <strong>public profile</strong> to share.
+      <strong>public profile</strong> to share.</p>
     <!--<br />
   Post updates about <strong>your projects</strong> to over 40,000 developers a week</p>-->
 
@@ -18,15 +18,15 @@
       <input id="password" type="password" class="form-control" placeholder="Password" required>
       <br />
     </div>
-    <button class="btn btn-lg btn-info btn-block" type="submit">Create my account</button>
+    <button class="btn btn-lg btn-info btn-block translateit" type="submit">Create my account</button>
     <img id="loader" src="img/ajax-loader.gif" style="display: none; margin: 30px auto;">
   </form>
   <p>
-    <br />Already have an account? <a href="login">Log in</a>
+    <br /><span class="translateit">Already have an account?</span> <a href="login" class="translateit">Log in</a>
   </p><br />
   <div  class='col-md-6 col-md-offset-3'>
 
-  <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp"></a><br />Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</p>
+  <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp"></a><br /><span class="translateit">Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</span></p>
 </div>
 </div>
 <script>
