added bunch of translateit tags

--- a/templates/newsfeed.html
+++ b/templates/newsfeed.html
@@ -1,6 +1,6 @@
   <div class="row">
     <div class="col-md-3" style="border-right: 1px solid #ccc;">
-      <strong>Post an update</strong>
+      <strong class="translateit">Post an update</strong>
 
       <div style="clear: both;"></div>
       <hr />
