--- a/templates/newsfeed_item.html
+++ b/templates/newsfeed_item.html
@@ -6,7 +6,7 @@
     <a href="/profile/{{login}}">
       <strong>{{login}}</strong>
     </a>
-    <br />{{{status}}}</p>
+    <br /><span  class="translateit">{{{status}}}</span></p>
   <div style="color: #ccc;" class="pull-right">Posted
     <span class="timeago" title="">{{timeago}}</span>
   </div>
