added bunch of translateit tags

--- a/templates/about.html
+++ b/templates/about.html
@@ -75,6 +75,16 @@
     <h3 class="translateit">Media</h3>
 
     <iframe width="560" height="315" src="//www.youtube-nocookie.com/embed/6-5hJblkLjo?rel=0" frameborder="0" allowfullscreen></iframe>
+
+    <h3 class="translateit">Translations</h3>
+      <ul>
+        <li><a href="http://ar.cdnjs.com" class="translateit">Arabic</a></li>
+        <li><a href="http://el.cdnjs.com" class="translateit">Greek</a></li>
+        <li><a href="http://es.cdnjs.com" class="translateit">Spanish</a></li>
+        <li><a href="http://fr.cdnjs.com" class="translateit">French</a></li>
+        <li><a href="http://ja.cdnjs.com" class="translateit">Japanese</a></li>
+        <li><a href="http://ru.cdnjs.com" class="translateit">Russian</a></li>
+      </ul>
   </div>
   <!--Span7-->
   <div class="col-md-5">
