--- a/templates/layout.html
+++ b/templates/layout.html
@@ -58,10 +58,10 @@
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a style="display: none;" class="login" href="/login" class="translateit">Login</a>
-              <li><a style="display: none;" class="logout" href="/logout" class="translateit">Logout</a>
-              <li><a style="display: none;" class="register" href="/register" class="translateit">Register</a>
-              <li><a style="display: none;" class="profile" href="/profile" class="translateit">Profile</a>
+              <li><a style="display: none;" class="login translateit" href="/login" >Login</a>
+              <li><a style="display: none;" class="logout translateit" href="/logout" >Logout</a>
+              <li><a style="display: none;" class="register translateit" href="/register" >Register</a>
+              <li><a style="display: none;" class="profile translateit" href="/profile" >Profile</a>
               </li>
             </ul>
           </div>
