Added userapp to about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -61,13 +61,17 @@
     <h3 class="translateit">Sponsors</h3>
     <div class="sponsors">
 
+<a href="http://cloudflare.com">
+  <img alt="cloudflare" style="margin-bottom: 20px;" src="/img/poweredbycloudflare.png" />
+</a>
+<br />
       <p class="translateit">At CloudFlare, we believe that open source, community-driven projects like CDNJS are the tools upon which the future of the internet will be built. CloudFlare is proud to provide the global CDN infrastructure that will help power that future.</p>
 
       <br />
-      <a href="http://cloudflare.com">
-        <img alt="cloudflare" style="margin-bottom: 20px;" src="/img/poweredbycloudflare.png" />
-      </a>
-      <br />
+
+
+          <p style="color: #444"><a href="https://www.userapp.io" target="_blank"><img src="https://www.userapp.io/img/badge.png" title="User management by UserApp"></a><br /><span  class="translateit">Our user system is sponsored by UserApp. UserApp provides you with user management functionality that results in faster development, faster revenue, more users, and the ability to serve your users better by engaging with them more efficiently.</span></p>
+
       <!--
                             <em><img src="http://d2i3bryf8wh7jo.cloudfront.net/bitcoin1.png" style="float: left; margin-right: 10px; width: 40px; height: 40px;" /> Earn <strong>$5 in Bitcoin</strong> for every pull request which <a href="https://github.com/cdnjs/cdnjs#enabling-npm-auto-update">converts a library to auto-update.</a></em>-->
 
