supporting reset the net

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -73,6 +73,7 @@
 
 
     <div class="clear"></div>
+    <a href="https://www.resetthenet.org/"><img src="https://www.resetthenet.org/images/banner-wide.png" style="width: 100%;margin-bottom: 20px;"></a>
     <div class="page ">
       {{{page}}}
     </div>
