--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,7 +54,7 @@
           </div>
           <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-              <li class=""><a href="/news" class="translateit">Submit</a></li>
+              <li class=""><a href="/news" class="translateit">Discussion</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
