add PeterDaveHello on the maintainer list

--- a/templates/about.html
+++ b/templates/about.html
@@ -46,6 +46,16 @@
             <a href="http://decompile.it/blog/">Drew Freyling</a>
           </td>
         </tr>
+        <tr>
+          <td style="width: 200px;">
+          </td>
+          <td style="width: 200px;">
+            <a href="https://www.peterdavehello.org" style="margin-right: 10px;">
+              <img style="width: 50px;" alt="Drew Freyling" src="/img/PeterDaveHello.png" />
+            </a>
+            <a href="https://www.peterdavehello.org">Peter Dave Hello</a>
+          </td>
+        </tr>
 
       </tbody>
     </table>
