change PeterDaveHello's homepage to github profile

--- a/templates/about.html
+++ b/templates/about.html
@@ -50,10 +50,10 @@
           <td style="width: 200px;">
           </td>
           <td style="width: 200px;">
-            <a href="https://www.peterdavehello.org" style="margin-right: 10px;">
+            <a href="https://github.com/PeterDaveHello" style="margin-right: 10px;">
               <img style="width: 50px;" alt="Drew Freyling" src="/img/PeterDaveHello.png" />
             </a>
-            <a href="https://www.peterdavehello.org">Peter Dave Hello</a>
+            <a href="https://github.com/PeterDaveHello">Peter Dave Hello</a>
           </td>
         </tr>
 
