added chat link back in

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,7 @@
   <div class="container">
 
     <div class="row">
-      <div class="col-md-7">
+      <div class="col-md-6">
         <div class="navbar navbar-default">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
@@ -42,7 +42,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-6">
         <div class="navbar navbar-inverse">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
@@ -55,6 +55,7 @@
           <div class="navbar-collapse collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
               <li class=""><a href="/news" class="translateit">Discussion</a></li>
+              <li class=""><a href="https://gitter.im/cdnjs/cdnjs" class="translateit">Chat (say hello!)</a></li>
 
             </ul>
             <ul class="nav navbar-nav navbar-right">
